[metadata]
name = ryu
summary = Component-based Software-defined Networking Framework
license = Apache License 2.0
author = Ryu project team
author-email = ryu-devel@lists.sourceforge.net
home-page = http://osrg.github.io/ryu/
description-file = README.rst
platform = any
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Networking
    Natural Language :: English
    Programming Language :: Python
    Operating System :: Unix
keywords =
    openflow
    openvswitch
    openstack

[files]
packages =
    ryu
data_files =
    etc/ryu =
        etc/ryu/ryu.conf

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[bdist_rpm]
Release = 1
Group = Applications/Accessories
Requires = python-eventlet, python-routes, python-webob, python-paramiko, python-netaddr python-oslo-config
doc_files = LICENSE
            MANIFEST.in
            README.rst
            SubmittingPatches.rst
            doc/

[global]
setup-hooks =
    ryu.hooks.setup_hook

[entry_points]
console_scripts =
    ryu-manager = ryu.cmd.manager:main
